Fix glitches on mobile

--- a/web/styles.less
+++ b/web/styles.less
@@ -39,7 +39,9 @@ h2 {
 .xmraddr {
     font-size: 8pt;
     font-family: monospace;
+    overflow-wrap: break-word;
     word-wrap: break-word;
+    word-break: break-word;
     color: @link;
 }
 .logo {
@@ -66,4 +68,5 @@ img.qr  {
         margin-bottom: 20px;
     }
 }
+.w100 { width: 100%; }
 .pt10 { padding-top: 10px; }
